# MavlinkRelay

./: .gitignore  README.md
.catkin_tools/profiles/default/: build.yaml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  configuration_reference.md  project-overview.md  project_overview.md  security_hardening.md  suggested_commands.md  task_completion_checklist.md  test_suite_reference.md  wire_protocol_architecture.md
.sisyphus/: boulder.json
.sisyphus/notepads/mavlink-quic-relay-server/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: mavlink-quic-relay-gcs.md
devel/: .catkin
jetson/.sisyphus/: boulder.json
jetson/.sisyphus/notepads/mavlink-quic-relay-jetson/: decisions.md  issues.md  learnings.md  problems.md
jetson/.sisyphus/notepads/mavlink-quic-relay-server/: learnings.md
jetson/.sisyphus/plans/: mavlink-quic-relay-jetson.md  mavlink-quic-relay-server.md
jetson/mavlink_quic_relay/: CMakeLists.txt  README.md  package.xml
jetson/mavlink_quic_relay/config/: relay_params.yaml
jetson/mavlink_quic_relay/include/mavlink_quic_relay/: priority_classifier.h  quic_client.h  reconnect_manager.h  relay_node.h  ros_interface.h
jetson/mavlink_quic_relay/launch/: relay.launch
jetson/mavlink_quic_relay/scripts/: ros_send_mavlink.py  send_mavlink_test.py
jetson/mavlink_quic_relay/src/: main.cpp  priority_classifier.cpp  quic_client.cpp  reconnect_manager.cpp  relay_node.cpp  ros_interface.cpp
jetson/mavlink_quic_relay/test/: mock_quic_server.py  test_mavlink_framing.cpp  test_priority_classifier.cpp  test_reconnect_manager.cpp  test_relay_roundtrip.py  test_relay_roundtrip.test  test_ros_interface_framing.cpp  test_thread_safe_queue.cpp
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
lte_module/: fix-permissions.sh  install.sh  uninstall.sh
lte_module/.serena/: project.yml
lte_module/.sisyphus/: boulder.json
lte_module/.sisyphus/evidence/: acceptance-20260312_113205.txt  acceptance-20260312_150042.txt  acceptance-20260312_150120.txt  acceptance-20260312_150341.txt  acceptance-20260312_151230.txt  acceptance-20260312_151845.txt  acceptance-20260312_152245.txt  final-f1-compliance-audit.txt  final-f2-code-quality.txt  final-f4-scope-fidelity.txt  task-1-skeleton.txt  task-10-networkd.txt  task-11-apn-param.txt  task-11-auto-apn.txt  task-12-smoke.txt  task-12-static.txt  task-13-no-coverage.txt  task-13-no-reboot.txt  task-13-singleton.txt  task-13-state-log.txt  task-14-dynamic-path.txt  task-14-level1.txt  task-14-level4-at.txt  task-14-no-reboot.txt  task-15-metrics.txt  task-15-warm-standby.txt  task-16-autosuspend-verify.txt  task-16-keepalive-guidance.txt  task-16-mtu.txt  task-16-rat-opt-in.txt  task-17-smoke-pass.txt  task-18-logrotate.txt  task-18-pack.txt  task-19-overview.txt  task-19-scenario-a.txt  task-19-scenario-b.txt  task-19-scenario-c.txt  task-19-scenario-d.txt  task-19-scenario-e.txt  task-2-udev.txt  (+14 more)
lte_module/.sisyphus/notepads/ec200u-jetson-ecm-deployment/: decisions.md  issues.md  learnings.md  learnings_append.md  problems.md
lte_module/.sisyphus/plans/: ec200u-jetson-ecm-deployment.md
lte_module/config/: lte-watchdog-logrotate  params.env
lte_module/docs/: CONVENTIONS.md  QUICK-CONNECT.md  ROUTING-POLICY.md  SCOPE.md  TUNING.md  USB-TOPOLOGY.md  troubleshooting.md
lte_module/network/: 10-eth0.network  10-eth1.network  10-lte0.link  20-lte0.network
lte_module/rules/: 99-ec200u-lte.rules
lte_module/scripts/: check-apn.sh  ecm-bootstrap.sh  find-at-port.sh  lte-enum-guard.sh  lte-evidence-pack.sh  lte-recovery.sh  lte-watchdog.sh  validate.sh  verify-tuning.sh
lte_module/tests/integration/: acceptance.sh  failure_inject.sh  run_all.sh  smoke.sh
lte_module/tests/lib/: evidence.sh
lte_module/tests/unit/: run_all.sh  test_find_at_port.sh  test_placeholder.sh  test_recovery.sh  test_route_metrics.sh  test_static_validation.sh  test_watchdog.sh
lte_module/units/: lte-ecm-bootstrap.service  lte-enum-guard.service  lte-watchdog.service
server/: .gitignore  AUTHENTICATION.md  Dockerfile  README.md  cert.pem  config.example.yaml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  key.pem  manage.py  pyproject.toml  schema.sql
server/certs/: cert.pem  generate_certs.sh  key.pem
server/mavlink_relay_server/: __init__.py  __main__.py  config.py  control.py  framing.py  protocol.py  registry.py  server.py  stats.py
server/mavlink_relay_server/backends/: __init__.py  turso.py
server/tests/: conftest.py  test_config.py  test_control.py  test_framing.py  test_framing_extended.py  test_protocol_logic.py  test_registry.py  test_security.py  test_stats.py
server/tests/integration/: Dockerfile.test  config.test.yaml  test_client.py
